Add native scope report error messages endpoint
